--- a/css/map.css
+++ b/css/map.css
@@ -1,56 +1,59 @@
-#store-locator-container{
-	float: left;
-	margin-left: 20px;
-	width: 875px;
-	font: normal 12px Arial, Helvetica, sans-serif;
-	color: #333;
+body
+{
+    background: #AF0215;
+    font-size: .80em;
+    font-family: "Helvetica Neue" , "Lucida Grande" , "Segoe UI" , Arial, Helvetica, Verdana, sans-serif;
+    margin: 0px;
+    padding: 5px;
+    color: #FFFFFF;
 }
 
-#page-header{
-	float: left;
+div .address
+{
+    background-image: url('../images/green_pin.png');
+    background-repeat: no-repeat;
+    height: 36px;
+    padding-left: 25px;
 }
 
-#form-container{
+div .error
+{
+    height: 30px;
+    color: #F68083;
+    padding-top: 5px;
+}
+
+
+#form-input label,
+div .address #lblAddress,
+div .error label
+{
+    font-weight: bold;
+}
+
+#map-container
+{
 	clear: left;
 	float: left;
-	margin-top: 15px;
 	width: 100%;
 }
 
-#map-container{
-	clear: left;
-	float: left;
-	margin-top: 27px;
-	height: 530px;
-	width: 875px;
-}
-
-#map-container a{
-	color: #e76737;
+#map-container a
+{
+	color: #FD7904;
 	text-decoration: none;
 }
 
-#map-container a:hover, #map-container a:active{
-	text-decoration: underline;
-}
-
-#map-container .custom-marker{
-	width: 32px;
-	height: 37px;
-	color: #fff;
-	background: url(../images/custom-marker.png) no-repeat;
-    padding: 3px;
-    cursor: pointer;
-}
-
-#loc-list{
+#loc-list
+{
 	float: left; 
-	width: 240px;
-	height: 530px;
+	width: 19%;
+	height: 600px;
 	overflow: auto;
 }
 
-#loc-list ul{
+#loc-list ul
+{
 	display: block;
 	clear: left;
 	float: left;
@@ -59,161 +62,72 @@
 	padding: 0;
 }
 
-#loc-list .list-label{
-	float: left;
-	margin: 10px 0 0 6px;
-	padding: 2px 3px;
-	width: 17px;
-	text-align: center;
-	background: #451400;
-	color: #fff;
-	font-weight: bold;
+#loc-list .list-label
+{
+    float: left;
+    padding: 2px 3px;
+    width: 17px;
+    text-align: center;
+    background: #FD7904;
+    font-weight: bold;
+    margin: 5px 3px 0 2px;
 }
 
-#loc-list .list-details{
-	float: left;
-	margin-left: 6px;
-	width: 165px;
+
+#loc-list .list-content
+{
+	margin: 2px 2px 0 0;
+	border: 1px solid #FD7904;
+	padding-left: 2px;
 }
 
-#loc-list .list-content{
-	padding: 10px;
-}
-
-#loc-list .loc-dist{
-	font-weight: bold;
-	font-style: italic;
-	color: #8e8e8e;
-}
-
-#loc-list li{
+#loc-list li
+{
 	display: block;
 	clear: left;
 	float: left;
-	margin: 6px 10px;
 	cursor: pointer;
-	width: 200px;
-	border: 1px solid #fff; /* Adding this to prevent moving li elements when adding the list-focus class*/
+	width: 100%;
 }
 
-#loc-list .list-focus{
-	border: 1px solid rgba(82,168,236,0.9);
-	-moz-box-shadow: 0 0 8px rgba(82,168,236,0.7);
-	-webkit-box-shadow: 0 0 8px rgba(82,168,236,0.7);
-	box-shadow: 0 0 8px rgba(82,168,236,0.7);
-	transition: border 0.2s linear 0s, box-shadow 0.2s linear 0s;
-}
-
-#map-container .loc-name{
-	color: #AD2118;
+#map-container .loc-name
+{
 	font-weight: bold;
+	padding-left: 27px;
 }
 
-#search-form{
+#search-form
+{
 	clear: left;
 	float: left;
 	height: 60px;
 }
 
-#form-input{
+#form-input
+{
 	float: left;
 	margin-top: 3px;
 }
 
-#form-input label{
-	font-weight: bold;
-}
-
-#form-input input{
-	padding: 4px;
-	line-height: 16px;
-	border: 1px solid #ccc;
-}
-
-#address{
+#address
+{
 	margin: 0 0 0 10px;
 }
 
-#submit{
+#submit-btn
+{
 	float: left;
-	cursor: pointer;
-	margin: 3px 0 0 10px;
-	padding: 3px 6px;
-	background: #ae2118;
-	border: 1px solid #961f17;
-	color: #fff;
-	-webkit-border-radius: 4px;
-    border-radius: 4px;
 }
 
-#loading-map{
-	float: left;
-	margin: 4px 0 0 10px;
-	width: 16px;
-	height: 16px;
-	background: url(../images/ajax-loader.gif) no-repeat;
-}
-
-#map{
+#map
+{
 	float: left; 
-	width: 635px; 
-	height: 530px; 
+	width: 80%; 
+	height: 600px;
+    border: 1px solid #FD7904;
 }
 
-/* Infowindow Roboto font override */
-.gm-style div, .gm-style span, .gm-style label, .gm-style a{
-	font-family: Arial, Helvetica, sans-serif;
-}
-
-/* Modal window */
-
-#overlay{
-     position: fixed;
-     left: 0px;
-     top: 0px;
-     width:100%;
-     height:100%;
-     z-index: 10000;
-     background: url(../images/overlay-bg.png) repeat;
-}
-
-#modal-window{
-	position: absolute;
-	left: 50%;
-    margin-left: -460px; /* width divided by 2 */
-    margin-top: 60px;
-    width: 920px;
-	height: 590px;
-	z-index: 10010;
-	background: #fff;
-	border-radius: 10px;
-	box-shadow: 0 0 10px #656565;
-}
-
-#modal-content{
-	float: left;
-	padding: 0 22px; /* there's already a margin on the top of the map-container div */
-}
-
-#close-icon{
-	position: absolute;
-	top: -6px;
-	right: -6px;
-	width: 18px;
-	height: 18px;
-	cursor: pointer;
-	background: #2c2c2c url(../images/close-icon.png) 3px 3px no-repeat;
-	border: 1px solid #000;
-	border-radius: 3px;
-	box-shadow: 0 0 3px #656565;
-}
-
-
-/* The following is for the geocode page and not the store locator */
-
-#geocode-result{
-	clear: left;
-	float: left;
-	margin-top: 30px;
-	width: 100%;
+.infoWindow
+{
+    color: Black;
 }
